# AI---------AI---------

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260622_0001_create_company_profiles.py  20260623_0002_create_sources_and_knowledge.py  20260623_0003_create_product_cards.py  20260627_0004_finalize_product_card_contract.py  20260703_0005_create_campaigns.py  20260712_0006_create_lead_discovery.py  20260714_0007_create_lead_intelligence.py  20260720_0008_create_lead_scores.py
backend/app/: __init__.py  main.py  models.py
backend/app/core/: config.py  database.py  errors.py  logging.py
backend/app/modules/: __init__.py
backend/app/modules/campaigns/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/company/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/contacts/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/prompts/: README.md  __init__.py
backend/app/providers/: __init__.py  crawler_provider.py  gmail_provider.py  llm_provider.py  search_provider.py  storage_provider.py  task_queue_provider.py
backend/app/workflows/: __init__.py  lead_generation_workflow.py
backend/tests/: conftest.py  test_campaigns.py  test_companies.py  test_config.py  test_database.py  test_health.py  test_knowledge.py  test_lead_discovery.py  test_lead_scoring.py  test_lead_validation.py  test_products.py  test_sources.py
docs/: README.md  (+16 more)
(+73 files in other folders)
