[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-b2b-sales-backend"
version = "0.1.0"
description = "Backend skeleton for the AI B2B sales knowledge base system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.3.0",
  "psycopg[binary]>=3.2.0",
  "pytest>=8.0.0",
  "redis>=5.0.0",
  "rq>=1.16.0",
  "sqlalchemy>=2.0.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
